# django-example

./: .eslintrc.json  .gitignore  Dockerfile  LICENSE.md  README.md  aws.tf  aws_ec2.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  site.yml
django_example/: db.sqlite3
django_example/aggregation/: admin.py  apps.py  filters.py  models.py  tests.py  urls.py  views.py
django_example/aggregation/migrations/: 0001_initial.py
django_example/app/: urls.py
django_example/csv_upload/: apps.py  models.py  urls.py  views.py
django_example/csv_upload/data/: example.csv
django_example/csv_upload/migrations/: 0001_initial.py  0002_alter_item_amount_alter_item_modified.py
django_example/custom_user/: tests.py
django_example/custom_user/migrations/: 0001_initial.py
django_example/django_example/: local_settings.py  settings.py  urls.py
django_example/example_app/: admin.py  models.py  tests.py  urls.py  views.py
django_example/example_app/migrations/: 0001_initial.py
django_example/json_search/: apps.py  models.py  tests.py
django_example/json_search/migrations/: 0001_initial.py  0002_stringdocument.py  0003_remove_stringdocument_author.py
django_example/static-dev/css/: bootstrap.min.css  bootstrap.min.css.map
django_example/static-dev/js/: example.js  example.min.js  (+1 more)
django_example/templates/: bootstrap.html
template_loader_bug/: manage.py
template_loader_bug/app/: views.py
template_loader_bug/template_loader_bug/: asgi.py  settings.py  urls.py  views.py  wsgi.py
template_loader_bug/templates/: example.html
(+18 files in other folders)
