[tool.poetry]
name = "django-example"
version = "0.1.0"
description = ""
authors = ["aodin <aaronoellis@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
gunicorn = "^20.1.0"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"

[tool.poetry.dev-dependencies]
ansible = "^7.3.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
