[tool.poetry]
name = "django-example"
package-mode = false
description = "Django Example"
authors = ["aodin <aaronoellis@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.4"
gunicorn = "^21.2.0"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2024.2"

[tool.poetry.group.dev.dependencies]
ansible = "^9.4"
black = "^24.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
